# bodhiproxy

./: .gitignore  Cargo.toml  Makefile
pyserver/: Cargo.toml  Makefile  pyproject.toml  pytest.ini
pyserver/pytests/: test_openai_chat.py  test_server.py
pyserver/python/bodhiproxy/: __init__.py
pyserver/src/: lib.rs
server/: Cargo.toml  Makefile
server/src/: lib.rs  main.rs  server.rs  utils.rs
server/tests/: test_openai_chat.rs  test_server.rs
server/tests/utils/: mod.rs  server_utils.rs
