[package]
name = "pyserver"
version = "0.1.0"
edition = "2021"

[lib]
name = "bodhiproxy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.2"
bodhiproxy = { version = "0.1.0", path = "../server" }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime", "attributes"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["trace", "timeout"] }
tower = "0.4.13"
once_cell = "1.19.0"
thiserror = "1.0.56"
