[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyserver"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "pyserver"
version = "0.1.0"
description = ""
authors = ["Amir Nagri <amir.nagri@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-dotenv = "^0.5.2"
openai = "^1.9.0"
pytest-timeout = "^2.2.0"
