[package]
name = "bodhiproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
pyo3 = "0.20.2"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.1", features = ["trace", "timeout"] }

[dev-dependencies]
rand = "0.8.5"
reqwest = "0.11.23"
rstest = "0.18.2"
